--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,3 +19,7 @@ services:
     volumes:
       - ./:/usr/src/app/
       - /var/results:/var/temp
+    command: python monitor.py
+  # cron:
+  #   depends_on:
+  #     - python
