--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - db
     volumes:
       - ./:/usr/src/app/
-      - /var/results:/var/temp
+      - /var/logs/results/:/var/logs/results/
     command: python monitor.py
   # cron:
   #   depends_on:
